.metadata/.plugins/org.eclipse.cdt.ui/ex1.build.log
16:15:04 **** Incremental Build of configuration Debug for project ex1 ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103x6 -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:269:5: error: redefinition of 'count'
  269 | int count = 0;
      |     ^~~~~
../Core/Src/main.c:156:6: note: previous definition of 'count' was here
  156 |  int count = 0;
      |      ^~~~~
../Core/Src/main.c:270:25: error: initializer element is not constant
  270 | uint32_t previousTick = HAL_GetTick();
      |                         ^~~~~~~~~~~
../Core/Src/main.c:272:38: error: unknown type name 'TIM_HandleTypeDef'; did you mean 'DMA_HandleTypeDef'?
  272 | void HAL_TIM_PeriodElapsedCallback ( TIM_HandleTypeDef * htim ){
      |                                      ^~~~~~~~~~~~~~~~~
      |                                      DMA_HandleTypeDef
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

16:15:04 Build Failed. 4 errors, 0 warnings. (took 213ms)

